--- a/content/projects/first-project.mdx
+++ b/content/projects/first-project.mdx
@@ -1,31 +1,22 @@
 ---
-title: Analytics Dashboard
-slug: analytics-dashboard
-summary: Realtime charts, role-based access, and integrations.
+title: AE-Werbung Meusegast
+slug: ae-werbung
+summary: Landing Page for a local marketing business
 date: 2025-05-20
 tags:
-  - Next.js
-  - Charts
-  - Auth
+  - Landing Page
+  - CSS
+  - HTML
 stack:
-  - Next.js
-  - React
-  - PostgreSQL
-  - Tailwind
-repoUrl: https://github.com/yourname/analytics-dashboard
-liveUrl: https://analytics.example.com
-cover: /images/posts/transitions.jpg
+  - HTML
+  - CSS
+  - JavaScript
+liveUrl: https://www.ae-werbung-meusegast.de/
+cover: /images/posts/ae-werbung.png
 featured: true
 published: true
 ---
 
 ## Overview
-I built a performant dashboard with realtime metrics, row-level security, and a modular widget system.
+I built a landing page for a small business owner in germany
 
-- Server components for data-heavy views
-- Streaming and Suspense for fast TTFB
-- Framer Motion for micro-interactions
-
-## Outcomes
-- 1.7s → 0.9s LCP
-- 30% time-on-page increase
