--- a/content/projects/focus-chrome-extention.mdx
+++ b/content/projects/focus-chrome-extention.mdx
@@ -10,9 +10,7 @@ stack:
   - JavaScript
   - HTML
   - CSS
-repoUrl: https://github.com/HorrorReaper/Chrome-Focus-Etention
-liveUrl: https://analytics.example.com
-cover: /images/posts/Focus.jpg
+cover: /images/posts/Focus.png
 ---
 
 ## Overview
