--- a/content/projects/iws-landing-page.mdx
+++ b/content/projects/iws-landing-page.mdx
@@ -17,7 +17,7 @@ cover: /images/posts/Iws.png
 ---
 
 ## Overview
-I built a nice landing page for a small business owner
+I built a nice landing page for a small business owner with the help of Lovable
 
 
 ## Outcomes
