--- a/content/projects/first-project.mdx
+++ b/content/projects/first-project.mdx
@@ -13,7 +13,7 @@ stack:
   - JavaScript
 liveUrl: https://www.ae-werbung-meusegast.de/
 cover: /images/posts/ae-werbung.png
-featured: true
+featured: false
 published: true
 ---
 
