BarBoost case study

--- a/content/projects/barboost.mdx
+++ b/content/projects/barboost.mdx
@@ -16,8 +16,20 @@ featured: true
 published: true
 ---
 
-## Overview
-I built a landing page for a fictional protein bar manufacturer, which I coded myself
+## The Challenge
+„Design and develop a landing page for a fictional premium protein bar brand that communicates natural ingredients, trust and sustainability, which targets health-conscious consumers aged 20–35."
+
+## My Approach
+- Research: Analysing successful B2C-Food-Brands like RXBar or Clif Bar, what worked on their website, like colors, layout and conversion-elements?
+- Design: Light, natural color scheme (shades of green + warm beige) instead of the typical dark fitness look, because the target group expects trust and naturalness, not aggression.
+- Structure: Conversion-optimized page structure: Hero → Trust → Products → Nutritional values → Social proof → Newsletter → Footer
+
+## Key Features
+- Fully responsive (mobile first)
+- Scroll-triggered animations
+- Interactive nutritional information display
+- Conversion-optimized CTA placement
+- Performance-optimized (lazy loading, WebP)
 
 <iframe src="/projects/barboost/index.html" style={{width: '100%', height: 480, border: 0, borderRadius: 8}}></iframe>
 
